# waygate

./: Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  hello_world.rs
fresh/: Cargo.toml
fresh-macros/: Cargo.toml
fresh-macros/src/: expand.rs  lib.rs  parser.rs  util.rs
fresh-macros/src/expand/: fresh.rs
fresh-macros/src/http/: method.rs
fresh-macros/src/parser/: fresh_attribute.rs
fresh-test/: Cargo.toml
fresh-test/src/: lib.rs  macros.rs
fresh-test/tests/: macros_test.rs
fresh/src/: client.rs  error.rs  lib.rs  prelude.rs
