# Workspace configuration
[workspace]
resolver = "2"
members = ["waygate", "waygate-macros", "examples", "waygate-test"]

# Package metadata
[workspace.package]
version = "0.1.0"
authors = ["Jixiang Liu"]
description = "A declarative, type-safe, and ergonomic HTTP client for Rust built on top of Reqwest."
license-file = "LICENSE"
edition = "2024"
homepage = "https://github.com/hipeday/waygate"
repository = "https://github.com/hipeday/waygate.git"
readme = "README.md"
keywords = ["http-client", "declarative", "rest-client", "reqwest"]
categories = ["network-programming", "asynchronous", "http-clients"]
documentation = "https://docs.rs/waygate"

# Define shared dependencies for all workspace members
[workspace.dependencies]

[workspace.dependencies.waygate]
path = "waygate"
version = "0.1.0"

[workspace.dependencies.waygate-macros]
path = "waygate-macros"
version = "0.1.0"

# Tokio async runtime
[workspace.dependencies.tokio]
version = "1.48.0"
features = ["rt-multi-thread", "macros"]

# Reqwest HTTP client
[workspace.dependencies.reqwest]
version = "0.12.24"
features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "cookies"]

# Serde for serialization/deserialization
[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

# Serde JSON support
[workspace.dependencies.serde_json]
version = "1.0.145"

# Thiserror for error handling
[workspace.dependencies.thiserror]
version = "2.0.17"

# URL crate for URL parsing and manipulation
[workspace.dependencies.url]
version = "2.5.7"

# Syn crate for parsing Rust code (used in waygate-macros)
[workspace.dependencies.syn]
version = "2.0.108"
features = ["full", "extra-traits", "parsing"]

# Proc-macro2 for procedural macros
[workspace.dependencies.proc-macro2]
version = "1.0.103"

# Quote crate for quoting Rust code (used in waygate-macros)
[workspace.dependencies.quote]
version = "1.0.41"

# Derive-Builder for builder pattern
[workspace.dependencies.derive_builder]
version = "0.20.2"

# Tracing for logging and diagnostics
[workspace.dependencies.tracing]
version = "0.1.41"