[package]
name = "fresh-macros"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
strum.workspace = true
strum_macros.workspace = true
derive_builder.workspace = true