[package]
name = "fresh-test"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
fresh.workspace = true
fresh-macros.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true